--- a/simias/src/Common/simias-client-bootstrap.config.in
+++ b/simias/src/Common/simias-client-bootstrap.config.in
@@ -7,6 +7,7 @@
       <Service name="Simias Interprocess Event Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Event.IProcEventServer" />
       <Service name="Simias PO Service" assembly="Simias" enabled="True" type="Thread" class="Simias.POBox.POService" />
       <Service name="Simias Sync Client" assembly="Simias" enabled="True" type="Thread" class="Simias.Sync.SyncClient" />
+      <Service name="Rendezvous Workgroup Domain" assembly="Simias.mDns.dll" enabled="False" type="Thread" class="Simias.mDns.Service" />
       @SIMIAS_CONF_SIMIAS_GAIM@
     </setting>
   </section>
