--- a/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
@@ -203,6 +203,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "iFolderObject.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "NotifyIconBalloonTip.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
