--- a/src/GaimDomain/Makefile.am
+++ b/src/GaimDomain/Makefile.am
@@ -11,7 +11,7 @@ GaimDomain_FLAGS = $(CSC_LIBFLAG)
 GaimDomain_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll Simias.dll SimiasClient.dll Novell.AddressBook.dll
 GaimDomain_LIBPATH = ../../src/Simias.dll ../../src/SimiasClient ../../src/AddressBook $(DESTDIR)$(webbindir)
 
-#EXTRA_DIST = $(GaimDomain_CSFILES)
+EXTRA_DIST = $(GaimDomain_CSFILES)
 
 NUNIT_TESTS := Simias.Gaim.dll
 
