--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,3 @@
-if BUILD_GAIM_DOMAIN
-GAIM_DOMAIN_DIR = GaimDomain
-endif
-
 if DARWIN
 SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias
 
@@ -9,7 +5,7 @@ DIST_SUBDIRS = $(SUBDIRS)
 endif
 
 if LINUX
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias $(GAIM_DOMAIN_DIR)
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias
 
 DIST_SUBDIRS = $(SUBDIRS)
 endif
