--- a/src/SimiasServer/Makefile.am
+++ b/src/SimiasServer/Makefile.am
@@ -13,6 +13,12 @@ PROJECT_FILES = $(srcdir)/SimiasServer.csproj
 
 EXTRA_DIST = $(SimiasServer_CSFILES) $(PROJECT_FILES) App.ico simias.in simias.cmd SimiasServer.exe.config
 
+SIMIAS_IN = simias.in
+
+simias: $(SIMIAS_IN)
+	sed -e 's,@_webbindir_@,@webbindir@,g' -e 's,@_bindir_@,@bindir@,g' $< > $@
+	chmod +x $@
+
 CUR_DIR := $(shell pwd)
 
 if MAKE_DOC_FILE
