--- a/src/SimiasServer/simias.in
+++ b/src/SimiasServer/simias.in
@@ -9,11 +9,11 @@
 #
 #######################################################################
 
-export MONO_PATH=@webbindir@
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@webbindir@
-export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@webbindir@:/Library/Frameworks/Mono.framework/Versions/Current/lib
-cd @bindir@
+export MONO_PATH=@_webbindir_@
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@_webbindir_@
+export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@_webbindir_@:/Library/Frameworks/Mono.framework/Versions/Current/lib
+cd @_bindir_@
 
 ulimit -n 1024
-mono @bindir@/SimiasServer.exe $@
+mono @_bindir_@/SimiasServer.exe $@
 
