--- a/src/Common/MyDns.cs.in
+++ b/src/Common/MyDns.cs.in
@@ -68,7 +68,7 @@ namespace Simias
 				process.StartInfo.RedirectStandardOutput = true;
 				process.StartInfo.CreateNoWindow = true;
 				process.StartInfo.UseShellExecute = false;
-				process.StartInfo.FileName = "@webbindir@/ifdata";
+				process.StartInfo.FileName = "@_webbindir_@/ifdata";
 				process.Start();
 				reader = process.StandardOutput;
 				process.WaitForExit(2000);
