--- a/configure.in
+++ b/configure.in
@@ -75,7 +75,7 @@ case $CSC in
         CSCFLAGS_OPTIMIZE="/optimize+"
         MONO=mono
         MONO_DEBUG='mono --debug'
-        MONO_PATH="\$(LOG4NET_DIR):\$(MDNSRESPONDER_DIR):\$(NOVELL_SECURITY_DIR):\$(top_srcdir)/external/SecureChannelSinks"
+        MONO_PATH="\$(LOG4NET_DIR):\$(NOVELL_SECURITY_DIR):\$(top_srcdir)/external/SecureChannelSinks"
         SYSTEM_XML='System.Xml.dll'
     ;;
     #
@@ -145,7 +145,6 @@ case $SIMIAS_OS in
         INSTALL_EXE_OPTS='--mode=644'
         LOG4NET_DIR="$EXTERNAL_DIR/log4net/bin/mono/1.0/release"
         NOVELL_SECURITY_DIR="$EXTERNAL_DIR/Novell.Security/mono/bin"
-        MDNSRESPONDER_DIR="$EXTERNAL_DIR/mDnsResponder/mono/bin"
         NUNIT="mono nunit-console.exe"
         NUNIT_LIBPATH="$TOOLDIR/NUnit/mono/bin"
         NUNIT_FLAGS='/nologo'
@@ -184,7 +183,6 @@ case $SIMIAS_OS in
         INSTALL_EXE_OPTS='--mode=644'
         LOG4NET_DIR="$EXTERNAL_DIR/log4net/bin/mono/1.0/release"
         NOVELL_SECURITY_DIR="$EXTERNAL_DIR/Novell.Security/mono/bin"
-        MDNSRESPONDER_DIR="$EXTERNAL_DIR/mDnsResponder/mono/bin"
         NUNIT="mono nunit-console.exe"
         NUNIT_LIBPATH="$TOOLDIR/NUnit/mono/bin"
         NUNIT_FLAGS='/nologo'
@@ -250,7 +248,6 @@ case $SIMIAS_OS in
         LIBS='kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib rpcrt4.lib ws2_32.lib imagehlp.lib'
         LOG4NET_DIR="$EXTERNAL_DIR/log4net/bin/net/1.0/release"
         NOVELL_SECURITY_DIR="$EXTERNAL_DIR/Novell.Security/net/bin"
-        MDNSRESPONDER_DIR="$EXTERNAL_DIR/mDnsResponder/net/bin"
         NUNIT="nunit-console.exe"
         NUNIT_LIBPATH="$TOOLDIR/NUnit/net/bin"
         NUNIT_FLAGS='/nologo'
@@ -297,7 +294,6 @@ AC_SUBST(LIB_PRE)
 AC_SUBST(LIBS)
 AC_SUBST(LOG4NET_DIR)
 AC_SUBST(NOVELL_SECURITY_DIR)
-AC_SUBST(MDNSRESPONDER_DIR)
 AC_SUBST(NUNIT)
 AC_SUBST(NUNIT_FLAGS)
 AC_SUBST(NUNIT_LIBPATH)
