--- a/src/Simias.dll/Makefile.am
+++ b/src/Simias.dll/Makefile.am
@@ -7,8 +7,8 @@ SIMIAS_CSFILES_CSC := $(subst /,$(SEP),$(SIMIAS_CSFILES_SRC))
 SIMIAS_INCLUDES =
 SIMIAS_RESOURCES =
 SIMIAS_FLAGS = $(CSC_LIBFLAG) /unsafe
-SIMIAS_LIBS1 = System.dll System.Data.dll $(SYSTEM_XML) System.Security.dll System.Runtime.Remoting.dll System.Web.dll System.Web.Services.dll SimiasClient.dll mDnsResponder.dll mDnsResponderApi.dll log4net.dll Novell.Security.ClientPasswordManager.NetCredential.dll Novell.Security.Utilities.dll
-SIMIAS_LIBPATH = $(LOG4NET_DIR) $(MDNSRESPONDER_DIR) $(NOVELL_SECURITY_DIR) ../SimiasClient
+SIMIAS_LIBS1 = System.dll System.Data.dll $(SYSTEM_XML) System.Security.dll System.Runtime.Remoting.dll System.Web.dll System.Web.Services.dll SimiasClient.dll log4net.dll Novell.Security.ClientPasswordManager.NetCredential.dll Novell.Security.Utilities.dll
+SIMIAS_LIBPATH = $(LOG4NET_DIR) $(NOVELL_SECURITY_DIR) ../SimiasClient
 
 if !WINDOWS
 	SIMIAS_LIBS = $(SIMIAS_LIBS1) Mono.Posix.dll
@@ -54,7 +54,6 @@ endif
 install-exec-local: all
 	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(DESTDIR)$(sysconfdir) $(DESTDIR)$(datadir)/simias
 	$(INSTALL_PROGRAM) Simias.dll $(DEBUG_FILES) $(DESTDIR)$(webbindir)
-	$(INSTALL_PROGRAM) $(srcdir)/$(MDNSRESPONDER_DIR)/m*.exe $(MDNSRESPONDER_DIR)/m*.dll $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) $(srcdir)/$(LOG4NET_DIR)/log4net.dll $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) $(srcdir)/$(NOVELL_SECURITY_DIR)/Novell.Security.ClientPasswordManager.NetCredential.dll $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) $(srcdir)/$(NOVELL_SECURITY_DIR)/Novell.Security.Utilities.dll $(DESTDIR)$(webbindir)
@@ -67,7 +66,6 @@ uninstall-local:
 	cd $(DESTDIR)$(webbindir); rm -f Novell.Security.SecureSink*.dll
 	cd $(DESTDIR)$(webbindir); rm -f log4net.dll
 	cd $(DESTDIR)$(webbindir); rm -f Novell.Security*.dll
-	cd $(DESTDIR)$(webbindir); rm -f mDnsResponder*
 	cd $(DESTDIR)$(webbindir); rm -f Simias.dll $(DEBUG_FILES)
 	cd $(DESTDIR)$(sysconfdir); rm -f Simias.log4net simias-client-bootstrap.config
 	cd $(DESTDIR)$(datadir)/simias; rm -f log4net.LICENSE.txt
