--- a/simias/other/SimpleServer/mono.web.config
+++ b/simias/other/SimpleServer/mono.web.config
@@ -15,7 +15,7 @@
 		executionTimeout="180"
 		maxRequestLength="1048576"
 	/>
-    
+
 <!-- take this out until we need it
 	<webServices>
 		<soapExtensionTypes>
@@ -28,6 +28,7 @@
 		</authentication>
     	
 		<httpModules>
+			<add name="AuthenticationModule" type="Simias.Security.Web.AuthenticationModule, Simias"/>
 		</httpModules>
     </system.web>
 
@@ -41,6 +42,8 @@
 
     <appSettings>
 		<add key="MonoServerDefaultIndexFiles" value="index.aspx, Default.aspx, default.aspx, index.html, index.htm" />
+		<add key="SimiasAuthNotRequired" value="Login.ashx, GetDomainID:Simias.DomainService.DomainService:Novell.Simias.Enterprise" />
+		<add key="SimiasRequireSSL" value="no" />
     </appSettings>
 	
 </configuration>
